Scrollbar issue fixed

--- a/app/settings/style.css
+++ b/app/settings/style.css
@@ -3,6 +3,17 @@
   outline: none;
 }
 
+body,
+html {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   background-color: #1c1c1c;
   color: #ffffff;
@@ -14,6 +25,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   user-select: none;
   -webkit-user-select: none;
   -webkit-app-region: drag;
@@ -33,10 +45,13 @@ body {
 
 .action-btn .min img,
 .action-btn .close img {
-  margin-top: 5px;
-  margin-right: 5px;
-  width: 25px;
-  height: 25px;
+  margin-top: 10px;
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+}
+.close {
+  margin-right: 30px;
 }
 
 .action-btn .close img {
